--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "tailwindcss": "^3.2.4"
   },
   "private": true
 }
