--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-redux": "^8.0.5"
