--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint src --color",
+    "prettier": "prettier src -check",
+    "lint-staged": "lint-staged --config lint-staged.js",
+    "husky-install": "husky install"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
@@ -28,7 +32,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "tailwindcss": "^3.2.4"
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.2",
+    "tailwindcss": "^3.2.4",
+    "tsc-files": "^1.1.3"
   },
   "private": true
 }
